--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -3,7 +3,7 @@
       "eslint:recommended",
       "plugin:react/recommended",
       "plugin:@typescript-eslint/recommended",
-      "prettier"
+      "plugin:prettier/recommended"
     ],
     "plugins": ["react", "react-hooks", "import", "jsx-a11y", "@typescript-eslint", "prettier"],
     "parser": "@typescript-eslint/parser",
