--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.11.2",
     "@types/react-helmet": "^6.1.6",
     "cross-env": "^7.0.3",
     "eslint": "^8.43.0",
